--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Thomas Zühlke
+title: Tristan Chaplet
 description: 'Business Card Page'
-url: 'http://thomas.zuehlke.family'
+url: ''
 baseurl: ''
 profilepic: '/images/tzuehlke.jpg'
 bkimage: '/images/bk1.jpg'
